sfdx-source/force-app/main/default/objects/Legal_Entity_Mapping__mdt/Legal_Entity_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-578: To store mapping of legal entity name with account fields.</description>
    <label>Legal Entity Mapping</label>
    <pluralLabel>Legal Entity Mapping</pluralLabel>
</CustomObject>