sfdx-source/force-app/main/default/objects/Legal_Entity_Mapping__mdt/fields/Billing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Code__c</fullName>
    <description>LEM-578: To store the billing state code.</description>
    <label>Billing State Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>