sfdx-source/force-app/main/default/objects/Legal_Entity_Mapping__mdt/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>LEM-578: To store the legal entity name.</description>
    <label>Legal Entity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>