sfdx-source/force-app/main/default/objects/Legal_Entity_Mapping__mdt/fields/Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vertical__c</fullName>
    <description>LEM-578: To store the primary vertical values.</description>
    <label>Primary Vertical</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>