sfdx-source/force-app/main/default/objects/Legal_Entity_Mapping__mdt/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>LEM-2031: To store the Record Type Name of the Account.</description>
    <label>Record Type Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>